--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "ts-specification",
   "version": "1.0.0",
   "description": "Specification pattern implementation for NodeJS in TypeScript",
-  "main": "dist/specification.js",
-  "typings": "dist/",
+  "main": "dist/Specification.js",
+  "typings": "dist/Specification.d.ts",
   "scripts": {
-    "build": "webpack",
-    "test": "npm run build && mocha --compilers js:babel-core/register -R spec test/test.js"
+    "lint": "tslint 'src/**/*.ts'",
+    "build": "rimraf dist/ && tsc",
+    "test": "npm run lint && npm run build && mocha --compilers js:babel-core/register -R spec test/test.js"
   },
+  "files": [
+    "dist/"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GeorgesAlkhouri/ts-specification.git"
@@ -27,12 +31,11 @@
   "homepage": "https://github.com/GeorgesAlkhouri/ts-specification.git#readme",
   "devDependencies": {
     "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
-    "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10",
-    "webpack": "^1.13.1"
+    "rimraf": "^2.5.2",
+    "tslint": "^3.5.0",
+    "tslint-config-standard": "^1.0.0",
+    "typescript": "^1.8.10"
   }
 }
