--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "keywords": [
     "specification-pattern",
+    "spec",
     "pattern",
     "node",
     "ts",
@@ -28,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/GeorgesAlkhouri/ts-specification.git/issues"
   },
-  "homepage": "https://github.com/GeorgesAlkhouri/ts-specification.git#readme",
+  "homepage": "https://github.com/GeorgesAlkhouri/ts-specification.git#README.md",
   "devDependencies": {
     "babel-core": "^6.9.0",
     "chai": "^3.5.0",
