--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/GeorgesAlkhouri/ts-specification.git#README.md",
   "devDependencies": {
     "babel-core": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "rimraf": "^2.5.2",
