--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-specification",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Specification pattern implementation for NodeJS in TypeScript",
   "main": "dist/Specification.js",
   "typings": "dist/Specification.d.ts",
@@ -17,6 +17,7 @@
     "url": "git+https://github.com/GeorgesAlkhouri/ts-specification.git"
   },
   "keywords": [
+    "specification",
     "specification-pattern",
     "spec",
     "pattern",
